Fix overflow and add mouse hover on btn

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -27,6 +27,7 @@
 
 .modal__container {
   max-width: 730px;
+  box-sizing: border-box;
   width: 100%;
   border-radius: 8px;
   background-color: #fff;
@@ -49,6 +50,9 @@
   background-color: transparent;
   border: none;
 }
+.modal__close-btn:hover {
+  cursor: pointer;
+}
 
 .modal__submit-btn {
   max-width: 156px;
@@ -62,6 +66,11 @@
   background-color: #212121;
   color: #fcf5e5;
   font-size: 16px;
+}
+
+.modal__submit-btn:hover {
+  cursor: pointer;
+  opacity: 85%;
 }
 
 .modal__title {
@@ -112,7 +121,7 @@
 
   .modal__input {
     font-size: 16px;
-    width: 85%;
+    padding-right: 0;
   }
 
   .modal__title {
